--- a/Tim đẹp/index.html
+++ b/Tim đẹp/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yêu Cậu vl</title>
+    <title>SORRY :<<<</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas class="webgl"></canvas>
-    <h1>I LOVE YOU</h1>
+    <h1>XIN LỖI MÀ</h1>
     <button id="play-music" type="button" aria-label="Play music">
         <svg fill="currentColor" viewBox="0 0 512 512" width="100" title="music">
             <!-- <path d="M470.38 1.51L150.41 96A32 32 0 0 0 128 126.51v261.41A139 139 0 0 0 96 384c-53 0-96 28.66-96 64s43 64 96 64 96-28.66 96-64V214.32l256-75v184.61a138.4 138.4 0 0 0-32-3.93c-53 0-96 28.66-96 64s43 64 96 64 96-28.65 96-64V32a32 32 0 0 0-41.62-30.49z" /> -->
